kubernetes/istio/example-pod-for-mtls-enabled-cluster.yml
## Example for deployment for mtls enabled cluster and no liviness probe 
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: redis
    app: redis-default
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      run: redis
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      annotations:
        status.sidecar.istio.io/port: "0"
      labels:
        run: redis
        app: redis-default
        version: "1"
    spec:
      containers:
      - image: redis:latest
        name: redis
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: redis
  name: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
    name: redis-default
  selector:
    app: redis-default
status:
  loadBalancer: {}
