kubernetes/istio/example-gw-vs.yaml
kind: Gateway
metadata:
  name: redis-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 30000
      name: http
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-virtual-service
spec:
  #Backend service name
  hosts:
  - "*"
  gateways:
  - redis-gateway
  tcp:
  - match:
    - port: 30000
    route:
    - destination:
        host: redis
        port:
          number: 6379
